<resources>
    <string name="select_asset_search_hint">Box ID, License Plate or Keyword</string>
    <string name="select_asset_previous_assets">Previous assets</string>
    <string name="select_asset_scan_qr_code">Scan QR-code</string>
    <string name="select_asset_not_in_vehicle">Not in vehicle</string>
    <string name="select_asset_no_previous_assets">No previous assets</string>
    <string name="select_asset_find_nothing">Sorry we couldn\'t find anything</string>
    <string name="select_asset_characters">Enter at least 3 characters</string>
    <string name="select_asset_error">Select asset error</string>
    <string name="select_asset_dialog_title">Nothing is selected</string>
    <string name="select_asset_information_no_selected_assets">You didn\'t select any asset and tap on back button. Please tap Continue to keep working or Close to end your session now.</string>
    <string name="select_asset_continue">Continue</string>
    <string name="select_asset_close">Close</string>
    <string name="eld_green">Green notification</string>
    <string name="eld_orange">Orange notification</string>
    <string name="eld_red">Red notification</string>
    <string name="occupancy_0">Single driver</string>
    <string name="occupancy_1">Main driver and co-driver</string>
    <string name="occupancy_2">Main driver and 2 co-drivers</string>
    <string name="occupancy_3">Main driver and 3 co-drivers</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_logs">Logs</string>
    <string name="navigation_multi_day">Multi-day</string>
    <string name="barcode_scanner_error">Camera permission is necessary for barcode scanning</string>
    <string name="error">Error</string>
    <string name="error_network">Network error</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_bad_request">Bad Request</string>
    <string name="error_not_authenticated">Not Authenticated</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_internal_server">Internal Server Error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_username">Username Required</string>
    <string name="error_password">Password Required</string>
    <string name="error_domain">Domain Required</string>
    <string name="error_pair">Pair error</string>
    <string name="no_network">No Network Available</string>
    <string name="app_compatability">Note: Compatible with Android 4.0.3 - 6.0.1</string>
    <string name="str_pw">PASSWORD</string>
    <string name="str_username">USERNAME</string>
    <string name="str_employee_id">EMPLOYEE ID</string>
    <string name="str_domain_name">DOMAIN NAME</string>
    <string name="str_licence">DRIVER LICENSE</string>
    <string name="str_home_address">HOME ADDRESS</string>
    <string name="str_name">NAME</string>
    <string name="str_change_pw">CHANGE PASSWORD</string>
    <string name="str_current_pw">CURRENT PASSWORD</string>
    <string name="str_new_pw">NEW PASSWORD</string>
    <string name="str_new_pw_confirm">CONFIRM PASSWORD</string>
    <string name="str_signature">SIGNATURE</string>
    <string name="str_change_signature">CHANGE SIGNATURE</string>
    <string name="str_is_day_light">IS DAYLIGHT SAVINGS: </string>
    <string name="str_hos_time_zone">TIME ZONE: </string>
    <string name="str_hos_lbl_cycle">CYCLE: </string>
    <string name="str_hos_rules">RULES </string>
    <string name="str_hos_add_event">ADD EVENT</string>
    <string name="str_hos_event_start_time">START TIME</string>
    <string name="str_hos_event_duty_status">DUTY STATUS</string>
    <string name="str_hos_comment_modified">[modified]</string>
    <string name="warning">Warning</string>
    <string name="str_hos_codriver">CO-DRIVER</string>
    <string name="str_hos_ondutyleft">ON DUTY LEFT</string>
    <string name="str_hos_drive">DRIVE</string>
    <string name="str_hos_distancedriven">DISTANCE DRIVEN</string>
    <string name="str_hos_permit">PERMIT#</string>
    <string name="str_hos_orgaddress">ORG ADDRESS</string>
    <string name="str_hos_homeaddress">HOME ADDRESS</string>
    <string name="str_hos_shiftstart">SHIFT START</string>
    <string name="str_hos_drivingleft">DRIVNG LEFT</string>
    <string name="str_hos_cycle">CYCLE</string>
    <string name="str_hos_startodom">START ODOMETER</string>
    <string name="str_hos_timezone">TIME ZONE</string>
    <string name="str_hos_orgname">ORG NAME</string>
    <string name="str_hos_equipment">EQUIPMENT:</string>
    <string name="str_hos_licenseplate">LICENSE PLATE:</string>
    <string name="str_hos_licenseprovince">LICENSE PROVINCE</string>
    <string name="str_hos_shipdocno">Shipping Doc Number</string>
    <string name="str_hos_permitnum">Permit Number</string>
    <string name="str_hos_trailerlicense">Trailer License</string>
    <string name="str_coworker_name">Co-Worker Name</string>
    <string name="str_hos_listoftrips">LIST OF TRIPS</string>
    <string name="str_rescan">RE-SCAN</string>
    <string name="openDrawer">OPEN</string>
    <string name="closeDrawer">CLOSE</string>
    <string name="menu_home">HOME</string>
    <string name="menu_inspec">FORMS</string>
    <string name="menu_hos">HOURS OF SERVICE</string>
    <string name="menu_email">SEND EMAIL</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_asset">SWITCH ASSET</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_coworkerlogin">CO-WORKER\n LOGIN</string>
    <string name="menu_coworkerlogout">CO-WORKER\n LOGOUT</string>
    <string name="menu_switchuser">SWITCH USERS</string>
    <string name="next">NEXT  &gt;</string>
    <string name="back">&lt;  BACK</string>
    <string name="fullname">FULLNAME</string>
    <string name="email">EMAIL</string>
    <string name="phonenum">PHONE NUMBER</string>
    <string name="licence">Dl 123454</string>
    <string name="address">ADDRESS</string>
    <string name="terminal">HOME TERMINAL</string>
    <string name="tzone">TIMEZONE</string>
    <string name="cycle">CYCLE</string>
    <string name="generic_cancel">CANCEL</string>
    <string name="app_name_orig">SENTINEL DRIVE</string>
    <string name="generic_scan">SCAN</string>
    <string name="Inspection_mode_message">INSPECTION MODE</string>
    <string name="notification_message">NOTIFICATION</string>
    <string name="box_connection_message">BOX CONNECTION</string>
    <string name="comments">COMMENTS</string>
    <string name="str_are_u_sure">Are you sure you like to CANCEL?</string>
    <string name="question">Question</string>
    <string name="str_is_there_defect">Does it have defects?</string>
    <string name="alert_q_back">What would you like to do?</string>
    <string name="str_logout">Logout</string>
    <string name="str_logout_offduty">Off-Duty and Logout</string>
    <string name="str_rvw_unsigned_logs">Review Unsigned Logsheet</string>
    <string name="str_posttripinspectionalert">Complete Post-trip Inspection</string>
    <string name="str_logout_action">Select An Action</string>
    <string name="str_logout_cancel">Cancel</string>
    <string name="login_btn_takeatour">TAKE A TOUR</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_btn_forgotpassword">FORGOT PASSWORD</string>
    <string name="login_txthint_domain">Company</string>
    <string name="login_txthint_password">Password</string>
    <string name="login_txthint_username">User Name</string>
    <string name="loginerror">Login error</string>
    <string name="login_success">Login success</string>
    <string name="login_comment">Successfully logged in as</string>
    <string name="fp_txthint_authcode">AUTHORIZATION CODE</string>
    <string name="fp_txthint_newpass">NEW PASSWORD</string>
    <string name="fp_txthint_retypepass">RE-TYPE PASSWORD</string>
    <string name="fp_btn_resetpass">RESET PASSWORD</string>
    <string name="conform_password">CONFIRM PASSWORD</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="anp_txt_newhere">YOU ARE NEW HERE</string>
    <string name="anp_txt_getstarted">Let\'s get you started</string>
    <string name="profile">Profile</string>
    <string name="pus">Profile Updated Successfully</string>
    <string name="sf_txt_setupfinished">THE SETUP IS FINISHED</string>
    <string name="sf_txt_quicktour">TAKE A QUICK TOUR OF APP</string>
    <string name="sf_btn_taketour">TAKE A TOUR</string>
    <string name="sf_btn_skiptour">SKIP TOUR</string>
    <string name="attacment">ATTACHMENT:</string>
    <string name="vehcile">VEHICLE</string>
    <string name="select_all">SELECT ALL</string>
    <string name="header_attachment">ATTACHMENT</string>
    <string name="button_save">SAVE</string>
    <string name="button_clr_defects">CLEAR DEFECTS</string>
    <string name="db_btn_addpretrip">ADD PRE TRIP</string>
    <string name="db_btn_addposttrip">ADD POST TRIP</string>
    <string name="db_btn_addTrailePreTrip">ADD TRAILER PRE TRIP</string>
    <string name="db_btn_addTrailerPostTrip">ADD TRAILER POST TRIP</string>
    <string name="db_btn_notifications">NOTIFICATIONS</string>
    <string name="db_txt_driving">DRIVING</string>
    <string name="db_txt_onduty">ON DUTY</string>
    <string name="db_txt_break">BREAK</string>
    <string name="db_txt_cycle">CYCLE</string>
    <string name="db_txt_remaining_hrs_tdy">Remaining hours today</string>
    <string name="db_txt_remaining_hrs_cycle">Remaining hours in a cycle</string>
    <string name="db_vehicle">Vehicle Not Selected</string>
    <string name="db_unsigned_logsheet_dialog_title">Sign LogSheets</string>
    <string name="db_unsigned_logsheet_us_text">You have unsigned logsheets in past 7 days</string>
    <string name="db_unsigned_logsheet_ca_text">You have unsigned logsheets in past 14 days</string>
    <string name="timer_default_time">00:00</string>
    <string name="timer_default_type">OFF DUTY</string>
    <string name="timer_hours_minutes">HOURS MINUTES</string>
    <string name="driver_profile_menu_eld">ELD</string>
    <string name="driver_profile_menu_malfunction">MLF</string>
    <string name="driver_profile_menu_sign">Sign</string>
    <string name="driver_profile_menu_occupants">Occupants</string>
    <string name="nav_home">Home</string>
    <string name="nav_inspector_view">Roadside Inspection</string>
    <string name="nav_transfer_view">Data Transfer</string>
    <string name="nav_help">Help</string>
    <string name="nav_driver_profile">Driver Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="edit_event_comment">Comment</string>
    <string name="log_header_time_zone">Time Zone</string>
    <string name="log_header_driver_name">Driver name</string>
    <string name="log_header_co_driver_s_name">Co-driver(s) name</string>
    <string name="log_header_vehicle_name">Vehicle name</string>
    <string name="log_header_vehicle_license">Vehicle license</string>
    <string name="log_header_start_odometer">Start Odometer</string>
    <string name="log_header_end_odometer">End Odometer</string>
    <string name="log_header_distance_driven">Distance Driven</string>
    <string name="log_header_carrier_name">Carrier Name</string>
    <string name="log_header_home_terminal_name">Home Terminal Name</string>
    <string name="log_header_home_terminal_address">Home Terminal Address</string>
    <string name="log_header_trailers">Trailer(s)</string>
    <string name="log_header_shipping_id">Shipping ID</string>
    <string name="log_header_driving_exemptions">Driving Exemptions</string>
    <string name="transfer_method">Transfer Method</string>
    <string name="transfer_email">Email</string>
    <string name="transfer_web_service">Web Service</string>
    <string name="transfer_send_logsheets">Send Logsheets</string>
</resources>