<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_inspector_view"
            android:checked="false"
            android:icon="@drawable/ic_send"
            android:title="@string/nav_inspector_view"/>
        <item
            android:id="@+id/nav_transfer_view"
            android:checked="false"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_transfer_view"/>
    </group>



    <group android:id="@+id/second_group">
        <item
            android:id="@+id/nav_help"
            app:itemIconTint="@android:color/black"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help"/>
        <item
            android:id="@+id/nav_driver_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_driver_profile"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"
            android:visible="false"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_logout"/>
    </group>
</menu>
