<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_diagnostic"
          android:icon="@drawable/ic_ico_dd_green"
          android:title="@string/driver_profile_menu_malfunction"
          local:showAsAction="always" />

    <item android:id="@+id/action_malfunction"
          android:icon="@drawable/ic_eld_green"
          android:title="@string/driver_profile_menu_eld"
          local:showAsAction="always" />

    <item android:id="@+id/action_duty"
          android:icon="@drawable/ic_duty_status_of"
          android:title="@string/driver_profile_menu_sign"
          local:showAsAction="always" />

    <item android:id="@+id/action_occupancy"
          android:icon="@drawable/ic_occupants_selector"
          android:title="@string/driver_profile_menu_occupants"
          local:showAsAction="always" />
</menu>