<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.bsmwireless.widgets.common.FontTextView
        android:id="@+id/type_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/timer_header_color"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/timer_default_type"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_smaller"
        app:font="bebasNeue"/>

    <com.bsmwireless.widgets.common.FontTextView
        android:id="@+id/time_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/timer_default_time"
        android:textSize="@dimen/textview_large"
        android:textColor="@android:color/white"
        app:font="bebasNeue"/>

    <com.bsmwireless.widgets.common.FontTextView
        android:id="@+id/label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/timer_hours_minutes"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_smaller"
        app:font="bebasNeue"/>

</merge>