<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bsmwireless.screens.driverprofile.DriverProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_gradient"
        android:theme="@style/ActionBarTheme">

        <include layout="@layout/menu_toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/transfer_method"
            android:textSize="@dimen/text_size_extra_small"/>

        <RadioGroup
            android:id="@+id/transfer_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/transfer_email">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/transfer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/transfer_email"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/transfer_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/transfer_web_service"/>

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/transfer_comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_comment_length"
            app:errorTextAppearance="@style/ErrorAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/transfer_comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_event_comment"
                android:maxLength="@integer/max_comment_length"
                style="@style/TextInputEditText"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>
        
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/transfer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_send_white"
            android:drawableLeft="@drawable/ic_send_white"
            android:drawablePadding="@dimen/default_margin"
            android:text="@string/transfer_send_logsheets"
            android:textColor="@color/white"
            app:backgroundTint="@color/accent"/>

    </LinearLayout>

    <com.bsmwireless.widgets.snackbar.SnackBarLayout
        android:id="@+id/transfer_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="?attr/actionBarSize"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"/>

</android.support.design.widget.CoordinatorLayout>
